style bug squish

--- a/src/App.css
+++ b/src/App.css
@@ -364,20 +364,20 @@ p.bold{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 20px;
+  padding: 10px;
   z-index: 1; 
   background-color: var(--lilac);
 }
 
 .footer-section {
-  flex: 1 1 200px; 
+  flex: 1 1 100px; 
   margin: 10px;
 }
 
 .scallop {
   position: absolute;
   /* top: -60%; for web */ 
-  top: -30px;
+  top: 0px;
   left: 0;
   width: 100%;
   height: auto;
